[CHORE] DTO 리팩토링